apps/eg-gateways/internal/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg-internal
spec:
  gatewayClassName: eg
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: eg-internal-config
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same # Only accept the HTTPRoute which specifies the HTTP -> HTTPS redirect

    - name: https
      port: 443
      protocol: HTTPS
      hostname: "*.tools.kilchhofer.info"
      tls:
        certificateRefs:
        - group: ""
          kind: Secret
          name: wildcard-tools-kilchhofer-info
        mode: Terminate
      allowedRoutes:
        namespaces:
          from: All

    - name: https-coder
      port: 443
      protocol: HTTPS
      hostname: "*.coder.tools.kilchhofer.info"
      tls:
        certificateRefs:
        - group: ""
          kind: Secret
          name: wildcard-coder-tools-kilchhofer-info
        mode: Terminate
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: coder
